welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:12: error: not found: value avancer
	avancer()}
        ^BDRBuggle:16: error: not found: value avancer
	avancer()}
        ^